--- a/HTML/CSS/mystyle.css
+++ b/HTML/CSS/mystyle.css
@@ -63,6 +63,11 @@ h3 {
     top: 5px;
 }
 
+.logo img {
+    width: 100px;
+    height: 100px;
+}
+
 .socials {
     display: flex;
     position: absolute;
