--- a/HTML/CSS/mystyle.css
+++ b/HTML/CSS/mystyle.css
@@ -825,6 +825,7 @@ text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33), -1px 0px 2px rgba(255, 255, 255, 0
     display: flex;
     padding: 10px;
     height: 400px;
+    background-color: white;
 }
 
 .item1a {
