--- a/HTML/CSS/mystyle.css
+++ b/HTML/CSS/mystyle.css
@@ -1457,9 +1457,9 @@ textarea::placeholder {
 }
 
 .total_bottom {
-    display: block;
-    float: right;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .signin_signup {
